k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: dev
  labels:
    app: my-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: my-app
          image: docker.io/mydockerhubrepo/myapp:5-dev
          ports:
            - containerPort: 5000
